# git-reel

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-05-25-git-reel-discovery-first-mvp.md  2026-05-27-local-dev-makefile.md  2026-05-28-real-github-discovery.md  2026-05-30-github-oauth-connect.md  2026-06-01-oauth-github-discovery.md  2026-06-03-oauth-dev-setup.md  2026-06-03-starred-discovery.md  2026-06-07-server-inline-comments.md  2026-06-13-github-connect-cleanup.md
docs/superpowers/specs/: 2026-05-25-git-reel-discovery-first-design.md  2026-05-28-real-github-discovery-design.md  2026-05-30-github-oauth-connect-design.md  2026-06-01-oauth-github-discovery-design.md  2026-06-03-oauth-dev-setup-design.md  2026-06-03-starred-discovery-design.md  2026-06-13-github-connect-cleanup-design.md
e2e/: git-reel.spec.ts  playwright.config.ts
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0002_oauth_state.sql  0003_oauth_states.sql
server/src/: app.rs  config.rs  db.rs  discovery.rs  error.rs  github.rs  lib.rs  main.rs  models.rs  repositories.rs
server/src/routes/: auth.rs  history.rs  mod.rs  reel.rs  saved.rs  settings.rs
server/tests/: api_flow.rs  github_fixtures.rs
server/tests/fixtures/: graphql_repository.json  search_repositories.json  starred_repositories.json
web/: index.html  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css  types.ts
web/src/api/: client.ts
web/src/components/: AppShell.tsx  DetailDrawer.tsx  (+1 more)
(+8 files in other folders)
